updated pip packages, removed django-registration, and added django-allauth to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
-Django==1.6.2
-Fabric==1.8.3
-South==0.8.4
-argparse==1.1
-django-bootstrap3==4.0.1
+Django==1.7.1
+Fabric==1.10.0
+boto==2.34.0
+django-allauth==0.18.0
+django-bootstrap3==4.11.0
 django-configurations==0.8
 django-crontab==0.5.1
-django-debug-toolbar==1.0.1
-django-registration==1.0
+django-debug-toolbar==1.2.1
 ecdsa==0.11
-paramiko==1.12.3
-psycopg2==2.5.2
+oauthlib==0.7.1
+paramiko==1.15.1
+psycopg2==2.5.4
 pycrypto==2.6.1
-sqlparse==0.1.11
+python-openid==2.2.5
+pytz==2014.7
+requests==2.4.3
+requests-oauthlib==0.4.2
+sqlparse==0.1.13
 wsgiref==0.1.2
